# hummingbird

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  commit_msg.txt  install.sh
.github/: CODEOWNERS  markdown-link-check.json  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  format.yml  release.yml
backends/: CMakeLists.txt
backends/cpu/: CMakeLists.txt  backend_cpu.c  backend_cpu.h  backend_cpu_kernels.c  backend_cpu_kernels.h  backend_cpu_kernels_test.c  backend_cpu_test.c
backends/cuda/: CMakeLists.txt  backend_cuda.cu  backend_cuda.h
backends/metal/: CMakeLists.txt  backend_metal.h  backend_metal.m
benchmarks/: CMakeLists.txt  bench_alloc.c  bench_graph.c  bench_kernel.c  bench_noop.c  bench_planner.c  bench_scheduler.c  bench_threadpool.c
build_linux/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_linux/backends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/backends/cpu/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_backend_cpu  test_backend_cpu_kernels
build_linux/benchmarks/: CTestTestfile.cmake  Makefile  bench_alloc  bench_kernel  bench_noop  bench_threadpool  cmake_install.cmake
build_linux/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  example_version
build_linux/frontends/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/frontends/cli/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hb
build_linux/frontends/server/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hb-server
build_linux/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_hummingbird
build_linux/src/backend/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_backend
build_linux/src/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_common
build_linux/src/config/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_config
build_linux/src/context/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_context
build_linux/src/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_core
build_linux/src/device/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_device
build_linux/src/executor/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_executor
build_linux/src/graph/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_graph
build_linux/src/kernel/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_kernel
build_linux/src/kv/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_kv
build_linux/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hb_toolinfo
cmake/: README.md
cmake/modules/: HBCompilerOptions.cmake  HBSanitizers.cmake
examples/: CMakeLists.txt  version.c
frontends/: CMakeLists.txt
frontends/cli/: CMakeLists.txt  main.c
frontends/server/: CMakeLists.txt  main.c
include/: README.md
include/hummingbird/: hummingbird.h  hummingbird_experimental.h
scripts/: README.md  scaffold_modules.sh
src/: CMakeLists.txt  README.md  hummingbird.c  hummingbird_test.c
src/adapter/: CMakeLists.txt  README.md  adapter.c  adapter.h  adapter_internal.h  adapter_mock.c  adapter_test.c
src/backend/: CMakeLists.txt  README.md  backend.c  backend.h  backend_internal.h  backend_test.c
src/common/: CMakeLists.txt  README.md  common.c  common.h  common_internal.h  common_test.c  error.c
src/config/: CMakeLists.txt  README.md  config.c  config.h  config_internal.h  config_test.c
src/context/: CMakeLists.txt  README.md  context.c  context.h  context_internal.h  context_test.c
src/core/: CMakeLists.txt  README.md  core.c  core.h  core_internal.h  core_test.c
src/device/: CMakeLists.txt  README.md  device.c  device.h  device_internal.h  device_test.c
src/executor/: CMakeLists.txt  README.md  executor.c  executor.h  executor_internal.h  executor_test.c
src/graph/: CMakeLists.txt  README.md  graph.c  graph.h  graph_internal.h  graph_test.c
src/kernel/: CMakeLists.txt  README.md  kernel.c  kernel.h  kernel_internal.h  kernel_test.c
src/kv/: CMakeLists.txt  README.md  kv.c  kv.h  kv_internal.h  kv_test.c
src/logging/: CMakeLists.txt  README.md  logging.c  logging.h  logging_internal.h  logging_test.c
src/memory/: CMakeLists.txt  README.md  memory.c  memory.h  memory_internal.h  memory_test.c
src/model/: CMakeLists.txt  README.md  model.c  model.h  model_format_gguf.c  model_format_safetensors.c  model_internal.h  model_test.c
src/planner/: CMakeLists.txt  README.md  planner.c  planner.h  planner_internal.h  planner_test.c
src/platform/: CMakeLists.txt  README.md  platform.c  platform.h  platform_internal.h  platform_test.c
src/profiler/: CMakeLists.txt  README.md  profiler.c  profiler.h  profiler_internal.h  profiler_test.c
src/quant/: CMakeLists.txt  README.md  quant.c  quant.h  quant_internal.h  quant_test.c
src/runtime/: CMakeLists.txt  README.md  runtime.c  runtime.h  runtime_internal.h  runtime_test.c
src/scheduler/: CMakeLists.txt  README.md  scheduler.c  scheduler.h  scheduler_internal.h  scheduler_test.c
src/stream/: CMakeLists.txt  README.md  stream.c  stream.h  stream_internal.h  stream_test.c
src/tensor/: CMakeLists.txt  README.md  tensor.c  tensor.h  tensor_internal.h  tensor_test.c
src/threadpool/: CMakeLists.txt  README.md  threadpool.c  threadpool.h  threadpool_internal.h  threadpool_test.c
src/tokenizer/: CMakeLists.txt  README.md  tokenizer.c  tokenizer.h  tokenizer_internal.h  tokenizer_mock.c  tokenizer_test.c
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_placeholder.c
tests/integration/: CMakeLists.txt  test_public_abi.c
tests/property/: CMakeLists.txt  test_placeholder.c
tests/support/: hbi_test.h
tools/: CMakeLists.txt  toolinfo.c
(+60 files in other folders)
